--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -96,6 +96,9 @@ button:hover {
   width: 100%;
   height: 100vh;
   background-size: cover;
+  background-position-y: 50px;
+  background-repeat: no-repeat;
+
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -151,4 +154,54 @@ button:hover {
   flex-direction: column;
   align-items: flex-end;
   text-align: start;
+}
+
+/*product*/
+.product {
+  cursor: pointer;
+  margin-bottom: 2rem;
+}
+.product img {
+  transition: 0.3s all;
+}
+.product:hover img {
+  opacity: 0.6;
+}
+.product .buy-btn {
+  background-color: #fb774b;
+  transform: translateY(50px);
+  opacity: 0;
+  transition: 0.3s all;
+}
+.product:hover .buy-btn {
+  transform: translateY(0);
+  opacity: 1;
+}
+hr {
+  width: 30px;
+  height: 3px !important;
+  opacity: 1 !important;
+  background-color: #fb774b;
+}
+.star {
+  padding: 10px 0;
+}
+.star i {
+  font-size: 0.9rem;
+  color: goldenrod;
+}
+#banner {
+  background-image: url("../imgs/men2.jpg");
+  width: 100%;
+  height: 100vh;
+  background-size: cover;
+  background-position-x: center;
+  background-position-y: 80px;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  color: antiquewhite;
 }
