--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -193,7 +193,7 @@ hr {
 #banner {
   background-image: url("../imgs/men2.jpg");
   width: 100%;
-  height: 100vh;
+  height: 60vh;
   background-size: cover;
   background-position-x: center;
   background-position-y: 80px;
@@ -204,4 +204,13 @@ hr {
   justify-content: center;
   align-items: flex-start;
   color: antiquewhite;
+}
+#banner h1 {
+  color: coral;
+}
+#banner button {
+  background-color: #fb774b;
+}
+#banner button:hover {
+  background-color: rgb(110, 105, 105);
 }
