--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -55,6 +55,7 @@ button:hover {
   padding-bottom: 2rem !important;
   top: 0;
   left: 0;
+  box-shadow: 0 5px 10pc 0 rgba(0, 0, 0, 0.1);
 }
 .navbar-light .navbar-nav .nav-link {
   padding: 0 20px;
@@ -92,11 +93,10 @@ button:hover {
   }
 }
 #home {
-  background-image: url("../imgs/men2.jpg");
+  background-image: url("../imgs/banner.jpg");
   width: 100%;
   height: 100vh;
   background-size: cover;
-  background-position-y: 50px;
   background-repeat: no-repeat;
 
   display: flex;
@@ -106,7 +106,7 @@ button:hover {
   color: antiquewhite;
 }
 #home span {
-  color: coral;
+  color: rgb(252, 243, 239);
 }
 #new .one img {
   width: 100%;
@@ -192,6 +192,7 @@ hr {
 }
 #banner {
   background-image: url("../imgs/men2.jpg");
+
   width: 100%;
   height: 60vh;
   background-size: cover;
@@ -206,11 +207,66 @@ hr {
   color: antiquewhite;
 }
 #banner h1 {
-  color: coral;
+  color: rgb(218, 209, 206);
+}
+#banner h4 {
+  color: rgb(218, 209, 206);
 }
 #banner button {
   background-color: #fb774b;
 }
 #banner button:hover {
   background-color: rgb(110, 105, 105);
+}
+footer {
+  background-color: #222222;
+  color: #d8d8d8;
+}
+footer h5 {
+  color: #d8d8d8;
+  font-weight: 700;
+  font-size: 1.2rem;
+}
+footer li {
+  padding-bottom: 4px;
+}
+footer li a {
+  font-size: 0.8rem;
+  color: #d8d8d8;
+  text-decoration: none;
+}
+footer li a:hover {
+  color: aqua;
+}
+footer .copyright a {
+  color: #222222;
+  height: 40px;
+  width: 40px;
+  background-color: aliceblue;
+  display: inline-block;
+  text-align: center;
+  line-height: 38px;
+  border-radius: 50%;
+  transition: 0.3s ease;
+  margin: 0 5px;
+}
+footer .copyright a:hover {
+  color: beige;
+  background-color: aqua;
+}
+footer p {
+  color: azure;
+}
+footer .copyright img {
+  width: 50%;
+}
+.logo {
+  width: 80px;
+  height: 70px;
+}
+.navbar .brand {
+  color: #fb774b;
+  margin: 3px 5px;
+  font-size: 1.5rem;
+  text-align: center;
 }
